--- a/Assertive/CMakeLists.txt
+++ b/Assertive/CMakeLists.txt
@@ -1,9 +1,10 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
+﻿# CMakeList.txt : CMake project for Assertive, include source and define
+# project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("Assertive")
+# Add source to this project's executable.
+add_executable (Assertive "Assertive.cpp" "Assertive.h")
 
-# Include sub-projects.
-add_subdirectory ("Assertive")
+set_property(TARGET Assertive PROPERTY CXX_STANDARD 20)
+# TODO: Add tests and install targets if needed.
